--- a/.github/workflows/deploy-to-astro.yaml
+++ b/.github/workflows/deploy-to-astro.yaml
@@ -15,18 +15,16 @@ on:
     branches:
       - main
 
-env:
-  ASTRO_API_TOKEN: ${{ inputs.apiToken || secrets.ASTRO_API_TOKEN }}
-  DEPLOYMENT_ID: ${{ inputs.deploymentId || vars.DEPLOYMENT_ID }}
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Deploy to Astro
-      uses: astronomer/deploy-action@v0.4
-      with:
-        deployment-id: ${{ github.event.inputs.deploymentId || secrets.ASTRO_DEPLOYMENT_ID }}
-        api-token: ${{ github.event.inputs.apiToken || secrets.ASTRO_API_TOKEN }}  
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      
+      - name: Deploy to Astro
+        uses: astronomer/deploy-action@v0.4
+        env:
+          ASTRO_API_TOKEN: ${{ github.event.inputs.apiToken || secrets.ASTRO_API_TOKEN }}
+        with:
+          deployment-id: ${{ github.event.inputs.deploymentId || secrets.ASTRO_DEPLOYMENT_ID }}
